<resources>

    <!-- Main page -->
    <string name="app_name">IamHere</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Emergency Contact</string>
    <string name="blood_label">Blood Group</string>
    <string name="birthday_label">Birthday</string>
    <string name="button_edit_profile">Edit Profile</string>

    <!-- Sound -->
    <string name="alarm_btn">Alarm</string>
    <string name="silence_btn">Slience</string>

    <!-- Edit profile page -->
    <string name="edit_name">Name</string>
    <string name="edit_birthday">Birthday</string>
    <string name="edit_sibling">Emergency Contact</string>
    <string name="edit_blood">Blood Group</string>
    <string name="alert_empty_field">All fields are required.</string>

    <!-- Universal button -->
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>

    <!-- Blood group Spinner -->
    <string name="blood_group_prompt">Choose a blood group</string>
    <string-array name="blood_group_spinner">
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>

    <!-- Introduce app -->
    <string name="intro1">Welcome to IamHere.</string>
    <string name="intro2">IamHere helps rescuer locate you when a disaster happens.</string>
    <string name="intro3">When the disaster happened, the rescuer will find you by making your phone generate sound.</string>
    <string name="intro4">It\'s automatic, You don\'t have to do anything.</string>
    <string name="intro5">Just please insert your personal information to make rescuing easier.</string>
    <string name="intro_button_edit_profile">Edit Profile</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="start">GOT IT</string>

    <!-- Notification -->
    <string name="notify_detected">IamHere found Rescuer-Signal.</string>

</resources>
