<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.procon_kosen.MainActivity" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_label"
                android:id="@+id/name_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/name_label"
                android:text="Boonyarith Piriyothinkul"
                android:id="@+id/name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/name"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/birthday_label"
                android:layout_below="@+id/name"
                android:id="@+id/birthday_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="11/01/1997"
                android:layout_below="@+id/birthday_label"
                android:id="@+id/birthday" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/birthday"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/blood_label"
                android:layout_below="@+id/birthday"
                android:id="@+id/blood_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="O"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@id/blood_label"
                android:id="@+id/blood" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/blood"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone_label"
                android:layout_below="@+id/blood"
                android:id="@+id/sibling_phone_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0817148068"
                android:layout_below="@+id/sibling_phone_label"
                android:id="@+id/sibling_phone1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="028022648"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/sibling_phone1"
                android:id="@+id/sibling_phone2" />


        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:background="@color/colorBtnGroup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_profile"
            android:id="@+id/edit_btn"
            android:drawableLeft="@mipmap/ic_mode_edit_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_btn"
            android:drawableLeft="@mipmap/ic_volume_up_black_24dp"
            android:layout_alignTop="@+id/edit_btn"
            android:layout_toRightOf="@+id/edit_btn"
            android:layout_toEndOf="@+id/edit_btn" />
    </RelativeLayout>

</RelativeLayout>